<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfiguracionTemaOscuro">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_cerrar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            style="@style/CardView.Light"
            android:layout_marginLeft="30dp"
            android:text="@string/txt_TemaOscuro"/>
    </LinearLayout>

    <RadioGroup
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/radioTemaClaro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Desactivado" />

        <RadioButton
            android:id="@+id/radioTemaOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Activado" />
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Sistemao" />

        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_textoTemaapp"/>
    </RadioGroup>


</LinearLayout>