<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfiguracionIdioma">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cerrar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:text="@string/txt_Idiomaaplicacion"/>
    </LinearLayout>

    <RadioGroup
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Español" />
        <TextView
            android:layout_marginLeft="33dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_idiomatelefono"></TextView>

        <RadioButton
            android:layout_marginTop="20dp"
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_English" />
        <TextView
            android:layout_marginLeft="33dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Ingles"></TextView>
    </RadioGroup>
</LinearLayout>