<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    app:cardCornerRadius="10dp"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtQuienrecibirapedido"
            android:textSize="20dp"
            android:layout_margin="10dp"
            style="@style/CardView.Light"
            android:gravity="center"
            android:textStyle="bold"/>

<!--        style="@style/CardView.Light" me servie para hacer engrita
 style="@style/CardView.Light"  esto para hacer mayuscula-->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="80dp" >

            <RadioButton
                android:id="@+id/radioreciboyo"
                android:layout_width="match_parent"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/recibireyo" />

            <RadioButton
                android:id="@+id/radioRecibeotrapersona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recibiraotrapersona" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSaveFile"
            android:layout_width="200dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:text="@string/txt_btn_continuar"
            android:background="@drawable/btnredondeados"
            android:layout_gravity="center"></Button>
    </LinearLayout>



</androidx.cardview.widget.CardView>