<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Repartidor.RegistroExitoso">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_delivery"


        ></ImageView>
    <View  android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/degradado_oscuro"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"

        >
        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:text="@string/txt_listo"
            android:textSize="40dp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Tucuentaha"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_sidocread"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="italic"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_parrafobienvenida"
                android:textAlignment="center"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:textSize="18dp"
                />


        </LinearLayout>


        <Button
            android:id="@+id/btnEmpezarReExitoso"
            android:layout_marginTop="150dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btnredondeados"
            android:text="@string/btn_empezar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"></Button>
    </LinearLayout>

</FrameLayout>