<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfiguracionTamFuente">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cerrar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:text="@string/txt_TamFuente"/>
    </LinearLayout>

    <FrameLayout
        android:background="#1B000000"
        android:layout_margin="50dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_TextoMuestra"/>

    </FrameLayout>
   <TextView
       android:layout_marginLeft="50dp"
       android:layout_marginBottom="80dp"
       android:textSize="16dp"
       android:textColor="@color/black"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/txt_VistaPrevia"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_fuente_texto"/>


        <SeekBar
            android:id="@+id/seekBar"
            android:layout_margin="20dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_fuente_texto"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/txt_textoindicaciones"/>

</LinearLayout>